attempting fix for missing fonts on IE

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -10,7 +10,7 @@
 
 @open-sans: 'Open Sans', 'Arial', sans-serif;
 @roboto: 'Roboto', 'Arial', sans-serif;
-@main-font: 'futura-pt', 'Open Sans', 'Arial', sans-serif;
+@main-font: 'futura-pt', 'Arial', sans-serif;
 @logo-font: 'Liberator', 'futura-pt', 'Arial', sans-serif;
 
 @gray: #d4d7ce;
@@ -220,7 +220,7 @@ header {
     letter-spacing: .02em;
     width: 70%;
     margin: 20px auto 0 auto;
-    font-family: 'futura-pt';
+    font-family: @main-font;
     color: @base-color;
   }
 }
